# kumo-api

./: Cargo.toml
src/: auth.rs  database.rs  main.rs  types.rs
src/routes/: add.rs  get.rs  get_all.rs  mod.rs  remove.rs  search.rs  validate.rs
