[package]
name = "kumo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
dotenvy = "0.15.6"
env_logger = "0.10.0"
hex-slice = "0.1.4"
hmac = "0.12.1"
jsonwebtoken = "8.2.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.2"
void = "1.0.2"
